[project]
name = "lead-intelligence-pipeline"
version = "0.1.0"
description = "Unified company lead enrichment pipeline for Singapore and Vietnam datasets."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

